# bank-ETL

./: .gitignore  Dockerfile.pipeline  Dockerfile.streamlit  LICENSE.md  README.md  docker-compose.yml  inspect_parquet.py  pyproject.toml
src/: extract.py  load.py  main.py  transform.py
src/utils/: config.py  logger.py
streamlit_app/: app.py
