[project]
name = "macro_etl_pipeline"
version = "0.1.0"
description = "Pipeline ETL de Indicadores Macroeconômicos com Python, Polars e DuckDB."
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31.0",
    "polars>=0.20.0",
    "duckdb>=0.10.0",
    "streamlit>=1.30.0",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"